data/runtime/manual_repairs/p134w_report_dir_fallback_exact_current_20260330_135604/inner_reports/p134w_p134w_report_dir_fallback_exact_current_20260330_135604.txt
PATCHOPS APPLY
Patch Name           : p134w_report_dir_fallback_exact_current
Manifest Path        : C:\dev\patchops\data\runtime\manual_repairs\p134w_report_dir_fallback_exact_current_20260330_135604\patch_manifest.json
Workspace Root       : C:\dev
Wrapper Project Root : C:\dev\patchops
Target Project Root  : C:\dev\patchops
Active Profile       : generic_python
Runtime Path         : (none)
Backup Root          : C:\dev\patchops\data\runtime\patch_backups\p134w_report_dir_fallback_exact_current_20260330_135604
Report Path          : C:\dev\patchops\data\runtime\manual_repairs\p134w_report_dir_fallback_exact_current_20260330_135604\inner_reports\p134w_p134w_report_dir_fallback_exact_current_20260330_135604.txt
Manifest Version     : 1


TARGET FILES
------------
C:\dev\patchops\patchops\workflows\common.py
C:\dev\patchops\tests\test_report_path_current.py


BACKUP
------
BACKUP : C:\dev\patchops\patchops\workflows\common.py -> C:\dev\patchops\data\runtime\patch_backups\p134w_report_dir_fallback_exact_current_20260330_135604\patchops\workflows\common.py
BACKUP : C:\dev\patchops\tests\test_report_path_current.py -> C:\dev\patchops\data\runtime\patch_backups\p134w_report_dir_fallback_exact_current_20260330_135604\tests\test_report_path_current.py


WRITING FILES
-------------
WROTE : C:\dev\patchops\patchops\workflows\common.py
WROTE : C:\dev\patchops\tests\test_report_path_current.py


VALIDATION COMMANDS
-------------------
NAME    : report_path_fallback_exact_current_pytest
COMMAND : py -m pytest -q tests/test_report_preference_apply_flow.py tests/test_report_preference_apply_flow_current.py tests/test_report_preference_examples.py tests/test_apply_report_write_current.py tests/test_report_path_current.py
CWD     : C:\dev\patchops
EXIT    : 2


FULL OUTPUT
-----------
[report_path_fallback_exact_current_pytest][stdout]

=================================== ERRORS ====================================
_____________ ERROR collecting tests/test_report_path_current.py ______________
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "C:\dev\patchops\tests\test_report_path_current.py", line 33
E       "target_project_root": str(wrapper_root).replace("\", "/"),
E                                                               ^
E   SyntaxError: unterminated string literal (detected at line 33)
=========================== short test summary info ===========================
ERROR tests/test_report_path_current.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!

[report_path_fallback_exact_current_pytest][stderr]



SMOKE COMMANDS
--------------
(none)


SMOKE OUTPUT
------------
(none)


AUDIT COMMANDS
--------------
(none)


AUDIT OUTPUT
------------
(none)


CLEANUP COMMANDS
----------------
(none)


CLEANUP OUTPUT
--------------
(none)


ARCHIVE COMMANDS
----------------
(none)


ARCHIVE OUTPUT
--------------
(none)


FAILURE DETAILS
---------------
Category : target_project_failure
Message  : Command 'report_path_fallback_exact_current_pytest' failed during validation with exit code 2.

SUMMARY
-------
ExitCode : 2
Result   : FAIL